--- a/packages/bot/src/i18n/about-me/en-US.json
+++ b/packages/bot/src/i18n/about-me/en-US.json
@@ -1,5 +1,5 @@
 {
-  "title": "About Me",
+  "name": "about-me",
   "description": "Get information about the bot.",
   "response": {
     "title": "About Me",
