--- a/packages/bot/src/i18n/colors/en-US.json
+++ b/packages/bot/src/i18n/colors/en-US.json
@@ -1,16 +1,34 @@
 {
-  "title": "Colors",
-  "description": "Get the colors of the bot.",
+  "title": "colors",
+  "description": "Personalize your nickname with a custom color.",
   "options": {
-    "hex-color": "Add a color to your name.",
-    "hex-custom": "Custom color. Format #FFFFFF"
+    "custom": "change your nickname color, the format is #RRGGBB."
   },
-  "embed": {
-    "title": "Colors",
-    "description": [
-      "The colors of the bot are:",
-      "```      {hexColor}    ```",
-      "You can add a color to your name with the command:"
-    ]
+  "colorIncorrect": {
+    "title": "🚫 Oops! Something went wrong with the color...",
+    "description": "It looks like the color you entered isn't correct. Make sure to use a valid hexadecimal format like `#FF5733`. Give it another try! 🎨",
+    "footer": "Correct format: #RRGGBB"
+  },
+  "roleError": {
+    "title": "⛔ Oops! Could not create role!",
+    "description": "It looks like we couldn't create the role you requested. Don't worry! Here's what might have happened:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes:** Possible causes. You do not have sufficient permissions. The bot does not have 'Manage Roles' permissions.3. The requested role is above the bot's role.\n3. How can you fix it?\nCheck your permissions or the bot's permissions.\n3. Make sure the bot's role is in the correct position.\n4.",
+    "footer": "⚙️ We're here to help! Contact the administrator if you need further assistance."
+  },
+  "errorColorPointer": {
+    "title": "⛔ Oops! Could not create role!",
+    "description": "You have not configured the color pointer. Please configure it in the settings menu.",
+    "footer": "⚙️ We're here to help! Contact the administrator if you need further assistance."
+  },
+  "colorCreate": {
+    "title": "✅ Role successfully created!",
+    "description": "Great!\n**✨ This is your new color <slot_0>, enjoy it!**",
+    "footer": "execute /colors to see the menu."
+  },
+  "colorsDefault": {
+    "placeholder": "Select a color"
+  },
+  "menu": {
+    "title": "Colors Menu",
+    "description": "Here’s everything you need to know about your role and the options to customize it to your liking.\n\n**🌟 Your Current Role:**\n- **Role Name:** <slot_0>\n- **Current Color:** #<slot_1>\n\n**🎨 What Can You Do?**\n1. Change the color of your **nick** using `/colors custom` or explore options with `/colors menu`.\n2. If you prefer, you can also remove the color whenever you want.\n\nMake your profile look just the way you want! 😄"
   }
 }
