fix: update contact information in Privacy Policy to include Ko-fi link

--- a/packages/website/src/content/docs/es/Privacy Policy/index.mdx
+++ b/packages/website/src/content/docs/es/Privacy Policy/index.mdx
@@ -52,6 +52,6 @@ Intentos de manipular o explotar vulnerabilidades del bot.
 Nos reservamos el derecho de modificar esta política en cualquier momento. Cualquier cambio será notificado en los canales oficiales y en el servidor de soporte.
 
 8. Contacto y Soporte
-Si tienes dudas, necesitas soporte o quieres más información sobre las colaboraciones en Ko-fi, contáctanos en nuestro servidor de soporte o en [CORREO O ENLACE A KO-FI].
+Si tienes dudas, necesitas soporte o quieres más información sobre las colaboraciones en Ko-fi, contáctanos en nuestro servidor de soporte o en [Ko-fi](https://ko-fi.com/frovahappy).
 
 Gracias por usar Beatriz-dono y apoyar su desarrollo continuo.
