refactor(docs): :recycle: restructure privacy policy and terms of use documentation

--- a/packages/website/src/content/docs/es/Resources/termsOfUse.mdx
+++ b/packages/website/src/content/docs/es/Resources/termsOfUse.mdx
@@ -1,6 +1,6 @@
 ---
-title: Política de Privacidad
-description: Política de Privacidad
+title: Política de Uso
+description: Política de Uso de Beatriz-dono
 ---
 
 Política de Uso de Beatriz-dono
@@ -36,9 +36,9 @@ Mayor probabilidad de que una propuesta de función tuya sea seleccionada e impl
 Política de Cancelación:
 
 Si dejas de colaborar, perderás el acceso a las ventajas mensuales al finalizar el período de tu colaboración activa, pero conservarás las ventajas ilimitadas adquiridas.
-Política de Reembolsos:
+Política de Reembolso:
 
-No se realizan reembolsos, salvo que ocurra un error técnico que impida el acceso a las ventajas premium.
+No se realizan reembolso, salvo que ocurra un error técnico que impida el acceso a las ventajas premium.
 5. Privacidad y Seguridad
 Beatriz-dono recopila los datos mínimos necesarios para su funcionamiento, como IDs de usuario, servidor y configuraciones específicas.
 Ningún dato recopilado será compartido con terceros, excepto cuando sea requerido por la ley.
@@ -52,6 +52,6 @@ Intentos de manipular o explotar vulnerabilidades del bot.
 Nos reservamos el derecho de modificar esta política en cualquier momento. Cualquier cambio será notificado en los canales oficiales y en el servidor de soporte.
 
 8. Contacto y Soporte
-Si tienes dudas, necesitas soporte o quieres más información sobre las colaboraciones en Ko-fi, contáctanos en nuestro servidor de soporte o en [Ko-fi](https://ko-fi.com/frovahappy).
+Si tienes dudas, necesitas soporte o quieres más información sobre las colaboraciones en Ko-fi, contáctenos en nuestro servidor de soporte o en [Ko-fi](https://ko-fi.com/frovahappy).
 
 Gracias por usar Beatriz-dono y apoyar su desarrollo continuo.
