refactor(docs): :recycle: update terms of use document for improved structure and clarity

--- a/packages/website/src/content/docs/es/Resources/termsOfUse.mdx
+++ b/packages/website/src/content/docs/es/Resources/termsOfUse.mdx
@@ -3,14 +3,12 @@ title: Política de Uso
 description: Política de Uso de Beatriz-dono
 ---
 
-Política de Uso de Beatriz-dono
-1. Introducción
+## Introducción
 Bienvenido/a a Beatriz-dono, un bot de Discord diseñado para ofrecer funcionalidades versátiles y útiles a los servidores. Beatriz-dono es un proyecto de código abierto bajo la licencia MIT, con opciones de colaboración a través de Ko-fi para acceder a funciones premium.
 
 Al usar Beatriz-dono, aceptas cumplir con esta política de uso.
 
-2. Uso Aceptable
-General:
+## Uso Aceptable
 
 Beatriz-dono debe usarse únicamente para los fines previstos según sus funcionalidades.
 Está prohibido utilizar el bot para actividades ilegales, malintencionadas, spam, acoso o cualquier acción que viole las normas de Discord o las leyes locales.
@@ -20,10 +18,10 @@ El código de Beatriz-dono es libre bajo la licencia MIT. Puedes modificarlo y u
 Servicios Premium:
 
 Las funciones adicionales disponibles mediante colaboración en Ko-fi están destinadas exclusivamente a quienes apoyen el proyecto. Cualquier intento de acceder a ellas sin contribuir será considerado una violación de esta política.
-3. Licencia y Derechos de Uso
+## Licencia y Derechos de Uso
 Beatriz-dono está bajo la licencia MIT. Esto significa que puedes usar, modificar y distribuir el código con libertad, siempre que mantengas la atribución adecuada.
 Las funciones premium no están cubiertas por la licencia abierta y requieren colaboración para su acceso.
-4. Servicios Premium y Colaboraciones
+## Servicios Premium y Colaboraciones
 Colaboraciones en Ko-fi:
 
 Puedes apoyar el desarrollo de Beatriz-dono mediante Ko-fi. Las colaboraciones habilitan funciones premium, divididas en:
@@ -39,19 +37,19 @@ Si dejas de colaborar, perderás el acceso a las ventajas mensuales al finalizar
 Política de Reembolso:
 
 No se realizan reembolso, salvo que ocurra un error técnico que impida el acceso a las ventajas premium.
-5. Privacidad y Seguridad
+## Privacidad y Seguridad
 Beatriz-dono recopila los datos mínimos necesarios para su funcionamiento, como IDs de usuario, servidor y configuraciones específicas.
 Ningún dato recopilado será compartido con terceros, excepto cuando sea requerido por la ley.
-6. Suspensión o Restricción de Uso
+## Suspensión o Restricción de Uso
 El uso de Beatriz-dono puede ser restringido en caso de:
 
 Violación de esta política.
 Uso indebido o malintencionado.
 Intentos de manipular o explotar vulnerabilidades del bot.
-7. Cambios en la Política de Uso
+## Cambios en la Política de Uso
 Nos reservamos el derecho de modificar esta política en cualquier momento. Cualquier cambio será notificado en los canales oficiales y en el servidor de soporte.
 
-8. Contacto y Soporte
+## Contacto y Soporte
 Si tienes dudas, necesitas soporte o quieres más información sobre las colaboraciones en Ko-fi, contáctenos en nuestro servidor de soporte o en [Ko-fi](https://ko-fi.com/frovahappy).
 
 Gracias por usar Beatriz-dono y apoyar su desarrollo continuo.
