refactor(docs): :recycle: enhance privacy policy and terms of use for clarity and structure

--- a/packages/website/src/content/docs/es/Resources/privacyPolicy.mdx
+++ b/packages/website/src/content/docs/es/Resources/privacyPolicy.mdx
@@ -3,42 +3,61 @@ title: Política de Privacidad
 description: Política de Privacidad de Beatriz-dono
 ---
 
-Última actualización: **05 de abril de 2025**
+**Última actualización: 05 de abril de 2025**
 
 ## 1. Introducción
-Beatriz-dono es un bot de Discord de código abierto con funciones freemium, diseñado para mejorar la experiencia de los usuarios en servidores de Discord. Respetamos la privacidad de nuestros usuarios y nos comprometemos a proteger la información recopilada y utilizada en nuestro servicio.
+
+Beatriz-dono es un bot de Discord de código abierto con funciones freemium, diseñado para mejorar la experiencia de los usuarios en servidores de Discord. Nos comprometemos a proteger la privacidad y seguridad de los datos recopilados, garantizando su uso responsable y transparente.
 
 ## 2. Información que Recopilamos
-Beatriz-dono recopila información de manera mínima y necesaria para su funcionamiento. Esto puede incluir:
-- **Datos de Discord**: ID de usuario, ID de servidor, ID de canal y mensajes de comando.
+
+Beatriz-dono recopila la información estrictamente necesaria para su funcionamiento. Esto puede incluir:
+
+- **Datos de Discord**: ID de usuario, ID de servidor, ID de canal y comandos enviados al bot.
 - **Preferencias del usuario**: Configuraciones personalizadas dentro del bot.
 - **Datos de almacenamiento** *(según el plan freemium)*: Contenido generado y almacenado por el usuario dentro del bot.
+- **Correo electrónico (opcional)**: En caso de que el usuario proporcione un correo electrónico para soporte o funciones premium, este será almacenado de forma encriptada en nuestra base de datos.
 
 ## 3. Uso de la Información
-La información recopilada se usa exclusivamente para:
+
+La información recopilada se utiliza exclusivamente para:
+
 - Ejecutar comandos y funciones del bot.
 - Personalizar la experiencia del usuario.
 - Mejorar y optimizar el servicio de Beatriz-dono.
 - Proporcionar funciones premium a los usuarios suscritos.
+- Validar identidad del usuario a través del correo electrónico encriptado, cuando sea necesario.
 
-## 4. Compartición de Datos
-No vendemos, compartimos ni transferimos información personal a terceros. Sin embargo, podemos divulgar información si es requerido por ley o para cumplir con una solicitud legal válida.
+No utilizamos la información para publicidad ni para fines distintos a los mencionados.
+
+## 4. Divulgación de Datos
+
+No vendemos, compartimos ni transferimos información personal a terceros. Sin embargo, podríamos divulgar información si:
+
+- Es requerido por ley o una solicitud legal válida.
+- Es necesario para proteger la seguridad, integridad o derechos del servicio y sus usuarios.
 
 ## 5. Almacenamiento y Seguridad
-La información se almacena de forma segura y solo por el tiempo necesario para la prestación del servicio. Los datos sujetos a los planes freemium pueden ser eliminados si el usuario deja de pagar la suscripción correspondiente.
+
+La información se almacena de forma segura y solo durante el tiempo necesario para la prestación del servicio. En caso de que un usuario deje de pagar una suscripción que incluya almacenamiento de datos, estos podrán ser eliminados tras un periodo de gracia. Los correos electrónicos almacenados estarán encriptados para mayor seguridad.
 
 ## 6. Derechos del Usuario
+
 Los usuarios tienen derecho a:
-- Solicitar la eliminación de sus datos almacenados.
-- Acceder y modificar sus preferencias dentro del bot.
-- Desactivar el bot en cualquier momento para dejar de compartir información.
+
+- **Solicitar la eliminación de sus datos**: Pueden solicitar la eliminación de datos almacenados a través de los comandos disponibles o contactando al soporte.
+- **Acceder y modificar sus preferencias**: Pueden cambiar su configuración dentro del bot según las opciones disponibles.
+- **Desactivar el bot en su servidor o cuenta**: Al hacerlo, se deja de recopilar información nueva.
 
 ## 7. Uso de Código Abierto
-Beatriz-dono es un proyecto de código abierto con licencia MIT. El código fuente está disponible públicamente, lo que permite auditorías independientes de seguridad y privacidad.
+
+Beatriz-dono es un proyecto de código abierto bajo licencia MIT. Su código fuente está disponible públicamente, permitiendo auditorías independientes para garantizar la seguridad y privacidad de los datos.
 
 ## 8. Cambios en la Política de Privacidad
-Nos reservamos el derecho de modificar esta política en cualquier momento. Se notificará a los usuarios sobre cambios importantes a través de Discord o documentación oficial del bot.
+
+Podemos actualizar esta política en cualquier momento. Notificaremos a los usuarios sobre cambios significativos a través del servidor de soporte en Discord o mediante documentación oficial.
 
 ## 9. Contacto
-Para preguntas o solicitudes relacionadas con la privacidad, contáctenos a través de nuestro servidor de soporte en Discord.
+
+Para consultas o solicitudes relacionadas con la privacidad, contáctenos a través de nuestro servidor de soporte en Discord.
 
