--- a/packages/website/src/content/docs/es/Resources/termsOfUse.mdx
+++ b/packages/website/src/content/docs/es/Resources/termsOfUse.mdx
@@ -2,54 +2,52 @@
 title: Política de Uso
 description: Política de Uso de Beatriz-dono
 ---
+## Política de Uso de Beatriz-dono
+**Última edición: 5 de marzo de 2025**
 
-## Introducción
-Bienvenido/a a Beatriz-dono, un bot de Discord diseñado para ofrecer funcionalidades versátiles y útiles a los servidores. Beatriz-dono es un proyecto de código abierto bajo la licencia MIT, con opciones de colaboración a través de Ko-fi para acceder a funciones premium.
+### Introducción
+Bienvenido/a a Beatriz-dono, un bot de Discord diseñado para ofrecer funcionalidades versátiles y útiles a los servidores. Beatriz-dono es un proyecto de código abierto bajo la licencia MIT, con opciones de colaboración a través de Ko-fi para acceder a funciones adicionales dentro de su modelo freemium.
 
 Al usar Beatriz-dono, aceptas cumplir con esta política de uso.
 
-## Uso Aceptable
-
-Beatriz-dono debe usarse únicamente para los fines previstos según sus funcionalidades.
+### Uso Aceptable
+Beatriz-dono debe usarse únicamente para los fines previstos según sus funcionalidades. 
 Está prohibido utilizar el bot para actividades ilegales, malintencionadas, spam, acoso o cualquier acción que viole las normas de Discord o las leyes locales.
-Código Abierto:
 
+### Código Abierto
 El código de Beatriz-dono es libre bajo la licencia MIT. Puedes modificarlo y usarlo, pero debes dar crédito al proyecto original y cumplir con los términos de la licencia.
-Servicios Premium:
 
-Las funciones adicionales disponibles mediante colaboración en Ko-fi están destinadas exclusivamente a quienes apoyen el proyecto. Cualquier intento de acceder a ellas sin contribuir será considerado una violación de esta política.
-## Licencia y Derechos de Uso
-Beatriz-dono está bajo la licencia MIT. Esto significa que puedes usar, modificar y distribuir el código con libertad, siempre que mantengas la atribución adecuada.
-Las funciones premium no están cubiertas por la licencia abierta y requieren colaboración para su acceso.
-## Servicios Premium y Colaboraciones
-Colaboraciones en Ko-fi:
+### Modelo Freemium
+Las funciones básicas de Beatriz-dono son gratuitas y accesibles para todos los usuarios. Sin embargo, hay funciones adicionales disponibles mediante colaboraciones en Ko-fi. Estas funciones incluyen:
 
-Puedes apoyar el desarrollo de Beatriz-dono mediante Ko-fi. Las colaboraciones habilitan funciones premium, divididas en:
-Ventajas Ilimitadas:
-Acceso anticipado a funciones nuevas o futuras.
-Extensión en la cantidad de canvas almacenados.
-Ventajas Mensuales:
-Participación en la votación y planificación del futuro del bot.
-Mayor probabilidad de que una propuesta de función tuya sea seleccionada e implementada.
-Política de Cancelación:
+#### Ventajas Ilimitadas:
+- Acceso anticipado a funciones nuevas o futuras.
+- Funciones exclusivas para servidores que colaboran, como configuraciones avanzadas y opciones de personalización.
 
+#### Ventajas Mensuales:
+- Participación en la votación y planificación del futuro del bot.
+- Tus propuestas de nuevas funciones recibirán prioridad en las votaciones comunitarias, aumentando sus posibilidades de ser implementadas en futuras actualizaciones del bot.
+- Características exclusivas dentro de ciertas funcionalidades del bot.
+
+### Políticas de Colaboración
+#### Cancelación
 Si dejas de colaborar, perderás el acceso a las ventajas mensuales al finalizar el período de tu colaboración activa, pero conservarás las ventajas ilimitadas adquiridas.
-Política de Reembolso:
 
-No se realizan reembolso, salvo que ocurra un error técnico que impida el acceso a las ventajas premium.
-## Privacidad y Seguridad
-Beatriz-dono recopila los datos mínimos necesarios para su funcionamiento, como IDs de usuario, servidor y configuraciones específicas.
-Ningún dato recopilado será compartido con terceros, excepto cuando sea requerido por la ley.
-## Suspensión o Restricción de Uso
+#### Reembolsos
+No se realizan reembolsos, salvo que ocurra un error técnico que impida el acceso a las ventajas freemium.
+
+
+
+### Suspensión o Restricción de Uso
 El uso de Beatriz-dono puede ser restringido en caso de:
+- Violación de esta política.
+- Uso indebido o malintencionado.
+- Intentos de manipular o explotar vulnerabilidades del bot.
 
-Violación de esta política.
-Uso indebido o malintencionado.
-Intentos de manipular o explotar vulnerabilidades del bot.
-## Cambios en la Política de Uso
+### Cambios en la Política de Uso
 Nos reservamos el derecho de modificar esta política en cualquier momento. Cualquier cambio será notificado en los canales oficiales y en el servidor de soporte.
 
-## Contacto y Soporte
-Si tienes dudas, necesitas soporte o quieres más información sobre las colaboraciones en Ko-fi, contáctenos en nuestro servidor de soporte o en [Ko-fi](https://ko-fi.com/frovahappy).
+### Contacto y Soporte
+Si tienes dudas, necesitas soporte o quieres más información sobre las colaboraciones en Ko-fi, contáctanos en nuestro servidor de soporte o en [Ko-fi](https://ko-fi.com/frovahappy).
 
 Gracias por usar Beatriz-dono y apoyar su desarrollo continuo.
