--- a/packages/website/src/content/docs/es/modules/colors.mdx
+++ b/packages/website/src/content/docs/es/modules/colors.mdx
@@ -2,9 +2,7 @@
 title: Módulo de Colores
 description: Usamos colores para dar vida a tu nombre de usuario y facilitar su personalización.
 ---
-import { Steps } from '@astrojs/starlight/components'
-import { Badge } from '@astrojs/starlight/components'
-import { Tabs, TabItem } from '@astrojs/starlight/components'
+import { Steps, Badge } from '@astrojs/starlight/components'
 
 ## ¿Qué hace este módulo?
 
@@ -23,39 +21,32 @@ Pero si le pasas el comando `/colors` con el argumento `custom`, podrás persona
 ### Iniciar el módulo
 
 Iniciar el módulo es sencillo: simplemente ejecuta el comando `/colors` en el servidor por primera vez y sigue los pasos que se te indicarán.
+este tiene un opcion `custom` para crear un color personalizado.
 
 ### Cómo personalizar la plantilla de colores
 
-<Tabs>
-  <TabItem label="Discord" icon="discord">
-    <Steps>
+<Steps>
+  1. Ejecuta el comando `/colors`. Aparecerá un botón de `configuración`; haz clic en él para abrir el menú. En el menú, selecciona la opción `Editar Templete` para personalizar los colores de la plantilla
 
-    1. Al ejecutar el comando `/colors`, verás un botón de configuración. Haz clic en él para acceder al menú, donde encontrarás la opción **Customize Template** para ajustar los colores de la plantilla.
+  2. En el menú emergente, se te pedirá un JSON con los colores que deseas modificar. Por ejemplo:
 
-    2. En el menú emergente, se te pedirá un JSON con los colores que deseas modificar. Por ejemplo:
+      ```json
+      {
+        "version": "v1",
+         "values": [
+          { "hex_color": "#000000", "label": "Black", "emoji": "<:black:1002412843090736640>" },
+          { "hex_color": "#ffffff", "label": "White", "description": "this color is white :0" },
+          { "hex_color": "#ff0000", "label": "Red" },
+        ]
+      }
+       ```
 
-        ```json
-        {
-          "version": "v1",
-          "values": [
-            { "hexcolor": "#000000", "label": "Black" },
-            { "hexcolor": "#ffffff", "label": "White" }
-          ]
-        }
-        ```
-
-        - `version`: <Badge text="Opcional" variant="note" /> Si no lo especificas, se usará la última versión del esquema.
-        - `values`: <Badge text="Obligatorio" variant="caution" /> arreglo de objetos con los colores a personalizar.
+      - `version`: <Badge text="Opcional" variant="note" /> Si no lo especificas, se usará la última versión del esquema.
+      - `values`: <Badge text="Obligatorio" variant="caution" /> arreglo de objetos con los colores a personalizar.
         - `hexcolor`: <Badge text="Obligatorio" variant="caution" /> Especifica el color en formato hexadecimal.
         - `label`: <Badge text="Obligatorio" variant="caution" /> Nombre descriptivo del color.
+        - `emoji`: <Badge text="Opcional" variant="note" /> El formato que soporta es el emoji de Discord.
+        - `description`: <Badge text="Opcional" variant="note" /> Puedes agregar una descripción adicional para el color.
 
-    3. ¡Listo! Ahora puedes ejecutar el comando `/colors` nuevamente para ver tus colores personalizados en acción.
-    
-    </Steps>
-  </TabItem>
-
-  <TabItem label="Website" icon="star">
-    en el futuro
-  </TabItem>
-
-</Tabs>
+</Steps>
+  3. ¡Listo! Ahora puedes ejecutar el comando `/colors` nuevamente para ver tus colores personalizados en acción.
