refactor(docs): :recycle: improve structure and clarity of terms of use documentation

--- a/packages/website/src/content/docs/es/Resources/termsOfUse.mdx
+++ b/packages/website/src/content/docs/es/Resources/termsOfUse.mdx
@@ -5,48 +5,59 @@ description: Política de Uso de Beatriz-dono
 **Última edición: 5 de marzo de 2025**
 
 ## Introducción
+
 Bienvenido/a a Beatriz-dono, un bot de Discord diseñado para ofrecer funcionalidades versátiles y útiles a los servidores. Beatriz-dono es un proyecto de código abierto bajo la licencia MIT, con opciones de colaboración a través de Ko-fi para acceder a funciones adicionales dentro de su modelo freemium.
 
 Al usar Beatriz-dono, aceptas cumplir con esta política de uso.
 
 ## Uso Aceptable
-Beatriz-dono debe usarse únicamente para los fines previstos según sus funcionalidades. 
+
+Beatriz-dono debe usarse únicamente para los fines previstos según sus funcionalidades.
 Está prohibido utilizar el bot para actividades ilegales, malintencionadas, spam, acoso o cualquier acción que viole las normas de Discord o las leyes locales.
 
 ## Código Abierto
+
 El código de Beatriz-dono es libre bajo la licencia MIT. Puedes modificarlo y usarlo, pero debes dar crédito al proyecto original y cumplir con los términos de la licencia.
 
 ## Modelo Freemium
+
 Las funciones básicas de Beatriz-dono son gratuitas y accesibles para todos los usuarios. Sin embargo, hay funciones adicionales disponibles mediante colaboraciones en Ko-fi. Estas funciones incluyen:
 
-### Ventajas Ilimitadas:
+### Ventajas Ilimitadas
+
 - Acceso anticipado a funciones nuevas o futuras.
 - Funciones exclusivas para servidores que colaboran, como configuraciones avanzadas y opciones de personalización.
 
-### Ventajas Mensuales:
+### Ventajas Mensuales
+
 - Participación en la votación y planificación del futuro del bot.
 - Tus propuestas de nuevas funciones recibirán prioridad en las votaciones comunitarias, aumentando sus posibilidades de ser implementadas en futuras actualizaciones del bot.
 - Características exclusivas dentro de ciertas funcionalidades del bot.
 
 ## Políticas de Colaboración
+
 ### Cancelación
+
 Si dejas de colaborar, perderás el acceso a las ventajas mensuales al finalizar el período de tu colaboración activa, pero conservarás las ventajas ilimitadas adquiridas.
 
 ### Reembolsos
+
 No se realizan reembolsos, salvo que ocurra un error técnico que impida el acceso a las ventajas freemium.
 
-
-
 ## Suspensión o Restricción de Uso
+
 El uso de Beatriz-dono puede ser restringido en caso de:
+
 - Violación de esta política.
 - Uso indebido o malintencionado.
 - Intentos de manipular o explotar vulnerabilidades del bot.
 
 ## Cambios en la Política de Uso
+
 Nos reservamos el derecho de modificar esta política en cualquier momento. Cualquier cambio será notificado en los canales oficiales y en el servidor de soporte.
 
 ## Contacto y Soporte
+
 Si tienes dudas, necesitas soporte o quieres más información sobre las colaboraciones en Ko-fi, contáctanos en nuestro servidor de soporte o en [Ko-fi](https://ko-fi.com/frovahappy).
 
 Gracias por usar Beatriz-dono y apoyar su desarrollo continuo.
