changed starlight i18n configuration to fix error and fixed Aside property error

--- a/packages/website/src/content/docs/es/project/build-commands.mdx
+++ b/packages/website/src/content/docs/es/project/build-commands.mdx
@@ -6,6 +6,6 @@ import { Aside } from '@astrojs/starlight/components'
 
 # Modo de uso
 
-<Aside type="warning">
+<Aside type="danger">
   Los archivos deben colocarse en el siguiente directorio `src/services/file.ts`, puedes mirar el Articulo [Sistema de Ficheros]
 </Aside>
