--- a/packages/website/src/content/docs/es/project/index.mdx
+++ b/packages/website/src/content/docs/es/project/index.mdx
@@ -87,7 +87,7 @@ las configuraciones de env en producción dependera del servidor que usemos en e
 
 ## Iniciarlo El Bot con Railway
 
-<Aside type="warning">
+<Aside type="danger">
   Actualmente el archivo de docker no esta correctamente configurado, por lo que no se puede usar el bot en producción.
   `problema con las variables de entorno`
 </Aside>
