docs: adding technology stack section

--- a/packages/website/src/content/docs/project/index.mdx
+++ b/packages/website/src/content/docs/project/index.mdx
@@ -9,9 +9,20 @@ import { Aside, Steps } from '@astrojs/starlight/components'
 - [Node.js](https://nodejs.org/es/) >= 22
 - [Docker](https://www.docker.com/) (opcional)
 
+## Stack de tecnologías
+
+<img
+  alt="Stack de tecnologías"
+  src="https://skillicons.dev/icons?perline=6&i=nodejs,express,discordjs,typescript,astro,react,sqlite,vitest"
+/>
+
+- Drizzle
+- LibSQL
+- Turso
+
 ## Como empezar a desarrollar
 
-Lo primero es clonar o hacer fork del repositorio, si lo que quieres es colaborar puedes leer el [/about/contributing](/about/contributing) para más información.
+Lo primero es clonar o hacer fork del repositorio, si lo que quieres es colaborar puedes leer el [/about-me/contributing](/about-me/contributing) para saber como hacerlo.
 
 Ahora toca instalar las dependencias y configurar el entorno de desarrollo.
 
